--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-wrapper">
               <a href="#" class="brand-logo" style="margin-left: 20px;">Analisador Sintático</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Limpar</a></li>
+                <li><a onclick="clearAll();">Limpar</a></li>
               </ul>
             </div>
           </nav>
@@ -131,12 +131,12 @@
                     </div>
                 </div>
                 <div class="col s6 m6">
-                    <div class="card">
+                    <div class="card" class="card-result">
                         <div class="card-content">
                             <h5>Resultado</h5>
                             <!-- <span class="card-title">Gramática GLC (LL1)</span> -->
                             <div style="margin-left: 10px; margin-right: 10px;">
-                                <table id="tabela" class="table" style="font-size: 0.8em; text-align: center;">
+                                <table id="tableResult" class="table" style="font-size: 0.8em; text-align: center;">
                                     <thead>
                                       <tr>
                                         <th>Pilha</th>
@@ -144,7 +144,7 @@
                                         <th>Saida</th>
                                       </tr>
                                     </thead>
-                                    <tbody class="parser">
+                                    <tbody id="parser">
                                     </tbody>
                                   </table>
                             </div>
@@ -160,4 +160,5 @@
 <script src="js/table_object.js"></script>
 <script src="js/sintatic_analyser.js"></script>
 <script src="js/generate_by_table.js"></script>
+<script src="js/utils.js"></script>
 </html>
