Fix sintatic analyser and implemented improvements

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                     </div>
                 </div>
                 <div class="col s6 m6">
-                    <div class="card" class="card-result">
+                    <div class="card card-result">
                         <div class="card-content">
                             <h5>Resultado</h5>
                             <!-- <span class="card-title">Gramática GLC (LL1)</span> -->
-                            <div style="margin-left: 10px; margin-right: 10px;">
+                            <div class="container-table">
                                 <table id="tableResult" class="table" style="font-size: 0.8em; text-align: center;">
                                     <thead>
                                       <tr>
